src/components/Layout/styles.scss
.page {
  width: 100%;
}

.page-container {
  display: flex;
  width: 100%;
  max-width: 1360px;
  margin: auto;
  min-height: 100vh;
}

.page-main,
.page-aside,
.page-footer {
  padding: 2rem;
  box-sizing: border-box;
}

.page-main {
  flex-grow: 1;
}

.page-aside {
  min-width: 300px;
  background: var(--grey-extra-light);

  @media (max-width: 1000px) {
    position: sticky;
    top: 0;
    left: 0;
    bottom: 0;
    min-width: 100px;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

.page-aside__title {
  min-height: 3.2rem;
  margin-bottom: 3rem;
  line-height: 1;
  color: var(--table-grey);

  A {
    text-decoration: none;
  }

  @media (max-width: 1000px) {
    font-size: 1.25rem;
  }
}

.page-aside__list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.page-aside__item {
  font-size: 1.2rem;

  & + & {
    margin-top: 1rem;
  }

  @media (max-width: 1000px) {
    text-align: center;
  }
}

.page-aside__link {
  text-decoration: none;

  &::before {
    margin-right: .45rem;
    cursor: pointer;

    @media (max-width: 1000px) {
      margin-right: 0;
      font-size: 2.5rem;
    }
  }

  &--dashboard::before {
    content: "📊";
  }

  &--products::before {
    content: "💼";
  }

  &--categories::before {
    content: "🗄";
  }
}

.page-aside__link-text {
  text-decoration: underline;

  .page-aside__link:hover & {
    text-decoration: none;
  }

  @media (max-width: 1000px) {
    display: none;
  }
}

.page-footer {
  flex-basis: 100%;
  display: flex;

  A + A {
    margin-left: 1rem;
  }
}

.page-content__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 3rem;
}

.page-content__title {
  margin-bottom: 0;
  line-height: 3rem;
  color: var(--grey);
}

.page-content__title-link {
  font-size: .8em;
}

.page-section {
  & + & {
    margin-top: 2rem;
  }

  &--column-charts {
    display: flex;
    flex-wrap: wrap;
  }
}

.page-section__title {
  flex-basis: 100%;
  line-height: 3rem;
  color: var(--grey);
}

